--- a/css/estilos.css
+++ b/css/estilos.css
@@ -473,12 +473,11 @@ hr{
         }
     }
     .sectionInf{
-        height: 75vh;
+        height: 50vh;
         width: 100%;        
         display: flex;
         justify-content:start;
         align-items: center;
-        border: 1px solid white;
         .divTrailer{
             width: 50%;
             height: 100%;
@@ -486,24 +485,20 @@ hr{
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            border: 1px white solid;
             h2{
-                font-size: 1.3rem;
-                border: 1px solid white;
-                width: 50%;
+                font-size: 1.1rem;
+                /*width: 100%;*/
                 text-align: start;
             }
         }
         .divInfo{
-            width: 50%;
-            border: 1px solid white;
+            width: 60%;
             display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
             height: 100%;
             .divInfoDetalle{
-                border: 1px solid white;
                 width: 100%;
                 height: 50%;
                 display: flex;
@@ -512,20 +507,36 @@ hr{
                 align-items: center;
                 gap: 30px;
                 h3{
-                    border: 1px solid white;
                     font-size: 1rem;
                     width: 100%;
                     text-align: center;
                 }
                 .tDatos{
                     display: flex;
-                    border: 1px solid white;
-                    justify-content:space-between;
+                    flex-direction: row;
+                    text-align:justify;
                     width: 50%;
+                    gap: 20px;
+                    font-size: 1.2rem;
                     .trDatos{
                         width: 50%;
+                        td{
+                            width: 30vw;
+                        }
                     }
                 }
+            }
+            .divRedes{
+                width: 50%;
+                text-align: center;
+                height: 10%;
+                display: flex;
+                justify-content:space-evenly;
+                a{
+                    color: var(--main-color);
+                    font-size: 1.5rem;  
+                }
+
             }
             
         }
