--- a/css/estilos.css
+++ b/css/estilos.css
@@ -60,6 +60,7 @@ hr{
             color: var(--main-color);
             font-size: 1.4rem;
             display: flex;
+            justify-content: center;
             align-items: center;
             gap: 5px;
             margin-left: 10px;
@@ -68,10 +69,11 @@ hr{
         .listNav{
             list-style: none;
             display: flex;
+            justify-content: center;
+            align-items: center;
             column-gap: 20px;
             margin-right: 30px;
             .linkNav{
-                /*border: 1px solid black;*/
                 padding: 10px;
                 border-radius: 10px;
                 transition: /*background-color 0.3s,*/ transform 0.3s;
@@ -585,16 +587,19 @@ hr{
 @media screen and (max-width:768px){
     /*----estilos de la pagina index.html para movil----*/
     .header{
-        height: 15vh;
+        height: 10vh;
         .navPrincipal{
             flex-direction: column;
             padding-top: 10px;
             a{
-                font-size: 1.4rem;
+                font-size: 1.1rem;
+                img{
+                    width: 30px;
+                }
             }
             .listNav{
                 a{
-                    font-size: 1rem;
+                    font-size: 0.7rem;
                 }
             }
         }
@@ -603,13 +608,13 @@ hr{
         height: 85vh;
         .contenedorTitulos{
             h1{
-                font-size: 3rem;
+                font-size: 2.5rem;
             }
             h2{
-                font-size: 1.5rem;
+                font-size: 1.2rem;
             }
             .btnRegistrarse{
-                font-size: 1.2rem;
+                font-size: 1rem;
             }
         }
     }
@@ -617,7 +622,7 @@ hr{
         height: 40vh;
         div{
             h2{
-                font-size: 1.5rem;
+                font-size: 1.2rem;
             }
             .formBusqueda{
                 display: flex;
@@ -626,7 +631,7 @@ hr{
                 align-items: center;
                 gap: 20px;
                 .txtBusqueda{
-                    width: 400px;
+                    width: 300px;
                     height: 2.5rem;
                     /*margin-right: 15px;*/
                     border-radius: 20px;
@@ -635,7 +640,7 @@ hr{
                     /*padding-left: 10px;*/
                 }
                 .btnBuscar{
-                    font-size: 1.2rem;
+                    font-size: 1rem;
                 }
             }
         }
@@ -654,10 +659,11 @@ hr{
         }
     }
     .footer{
+        height: 10vh;
         ul{
-            gap: 10px;
+            gap: 7px;
             a{
-                font-size: 0.8rem;
+                font-size: 0.6rem;
             }
         }
         .flechaArriba{
@@ -668,11 +674,11 @@ hr{
 
     /*----Estilos para la pagina iniciosesion.html para moviles-----*/
     .mainIniciosesion{
-        height: 75vh;
+        /*height: 75vh;*/
         .divIniciosesion{
             width: 80%;
             h1{
-                font-size: 2rem;
+                font-size: 1.5rem;
             }
             .formIniciosesion{
                 .txtEmail, .txtPassword{
@@ -681,6 +687,7 @@ hr{
                 }
                 .btnEnvioForm{
                     font-size: 1rem;
+                    height: 30px;
                 }
                 .linkReg{
                     font-size: 0.8rem;
@@ -689,29 +696,31 @@ hr{
         }
     }
     .footerIniciosesion{
+        flex-direction: column;
         ul{
-            gap: 10px;
+            gap: 7px;
             a{
-                font-size: 0.8rem;
+                font-size: 0.6rem;
             }
         }
     }
 
     /*--------Estilos para la pagina registrarse.html para mobile-----*/
     .mainRegistracion{
-        height: 75vh;
+        /*height: 75vh;*/
         .divRegistracion{
             width: 80%;
             h1{
-                font-size: 2rem;
+                font-size: 1.5rem;
             }
             .formRegistracion{
                 .inputForm{
-                    font-size: 1rem;
+                    font-size: 0.9rem;
+                    padding: 10px 15px;
                 }
                 .btnRegistracion{
                     font-size: 1rem;
-                    height: 35px;
+                    height: 30px;
                 }
                 .linkHelp{
                     font-size: 0.8rem;
@@ -730,11 +739,11 @@ hr{
                 margin-top: 15px;
             }
             .divDetalle{
-                width: 80%;
-                justify-content: center;
+                width: 90%;
+                justify-content: left;
                 margin-top: 10px;
                 h2{
-                    font-size: 1.3rem;
+                    font-size: 1.2rem;
                 }
                 h3{
                     font-size: 0.9rem;
@@ -755,44 +764,53 @@ hr{
                 }
                 .divReparto{
                     font-size: 0.7rem;
+                    text-align: center;
                 }
             }            
         }
         .sectionInf{
+            height: 60vh;
+            width: 100%;
+            display: flex;
             flex-direction: column;
             justify-content: center;
             align-items: center;
-            width: 80%;
-            height: 50%;
-            }
+            text-align: center;
             .divTrailer{
-                width: 80%;
+                width: 100%;
                 height: 50%;
                 h2{
                     font-size: 0.9rem;
+                    margin-top: 10px;
+                }
                 iframe{
                     width: 100%;
-                    height: 40%;
-                    object-fit: cover;
+                    height: 300px;
                 }
             }
             .divInfo{
-                width: 80%;
+                width: 100%;
                 height: 50%;
                 .divInfoDetalle{
-                    width: 70%;
-                    height: 50%;
+                    width: 100%;
+                    height: 70%;
                     gap: 15px;
                     h3{
-                        font: 0.8rem;
+                        font: 1rem;
                     }
                     .tDatos{
-                        gap: 15px;
-                        font-size: 0.9rem;
+                        gap: 20px;
+                        width: 90%;
+                        font-size: 1.1rem;
+                        trDatos{
+                            text-align: justify;
+                            width: 100%; 
+                        }
                     }
                 }
                 .divRedes{
                     font-size: 0.8rem;
+                    gap: 20px;
                 }
             }
         }
