--- a/css/estilos.css
+++ b/css/estilos.css
@@ -598,8 +598,9 @@ hr{
                 }
             }
             .listNav{
+                margin-bottom: 10px;
                 a{
-                    font-size: 0.75rem;
+                    font-size: 0.8rem;
                 }
             }
         }
@@ -660,14 +661,17 @@ hr{
     }
 
     .footer{
-        height: 15vh;
+        height: 20vh;
+        
         nav{
+            height: 100%;
             ul{
+                height: 100%;
                 flex-direction: column;
-                gap: 10px;
+                row-gap: 5px;
                 margin-bottom: 10px;
                 a{
-                    font-size: 0.75rem;
+                    font-size: 0.6rem;
                 }
             }
         }
@@ -680,7 +684,7 @@ hr{
 
     /*----Estilos para la pagina iniciosesion.html para moviles-----*/
     .mainIniciosesion{
-        height: 70vh;
+        height: 60vh;
         .divIniciosesion{
             width: 80%;
             h1{
@@ -693,7 +697,7 @@ hr{
                 }
                 .btnEnvioForm{
                     font-size: 1rem;
-                    height: 30px;
+                    height: 35px;
                 }
                 .linkReg{
                     font-size: 0.8rem;
@@ -702,14 +706,16 @@ hr{
         }
     }
     .footerIniciosesion{
-        height: 15vh;
+        height: 20vh;
         nav{
+            height: 100%;
             ul{
+                height: 100%;
                 flex-direction: column;
-                gap: 10px;
+                /*gap: 10px;*/
                 margin-bottom: 10px;
                 a{
-                    font-size: 0.8rem;
+                    font-size: 0.6rem;
                 }
             }
         }
@@ -717,7 +723,7 @@ hr{
 
     /*--------Estilos para la pagina registrarse.html para mobile-----*/
     .mainRegistracion{
-        height: 70vh;
+        height: 60vh;
         .divRegistracion{
             width: 80%;
             h1{
@@ -726,11 +732,12 @@ hr{
             .formRegistracion{
                 .inputForm{
                     font-size: 0.9rem;
-                    padding: 10px 15px;
+                    padding: 7px 12px;
+                    width: 100%;
                 }
                 .btnRegistracion{
                     font-size: 1rem;
-                    height: 30px;
+                    height: 35px;
                 }
                 .linkHelp{
                     font-size: 0.8rem;
@@ -795,7 +802,8 @@ hr{
                 }
                 iframe{
                     width: 100%;
-                    height: 300px;
+                    height: 330px;
+                    object-fit: cover;
                 }
             }
             .divInfo{
