--- a/css/estilos.css
+++ b/css/estilos.css
@@ -662,7 +662,6 @@ hr{
 
     .footer{
         height: 20vh;
-        
         nav{
             height: 100%;
             ul{
@@ -684,7 +683,7 @@ hr{
 
     /*----Estilos para la pagina iniciosesion.html para moviles-----*/
     .mainIniciosesion{
-        height: 60vh;
+        height: 65vh;
         .divIniciosesion{
             width: 80%;
             h1{
@@ -696,8 +695,10 @@ hr{
                     height: 25px;
                 }
                 .btnEnvioForm{
-                    font-size: 1rem;
-                    height: 35px;
+                    font-size: 1.3rem;
+                    /*height: 50px;*/
+                    padding: 5px 0;
+                    
                 }
                 .linkReg{
                     font-size: 0.8rem;
@@ -723,7 +724,7 @@ hr{
 
     /*--------Estilos para la pagina registrarse.html para mobile-----*/
     .mainRegistracion{
-        height: 60vh;
+        height: 65vh;
         .divRegistracion{
             width: 80%;
             h1{
@@ -749,6 +750,7 @@ hr{
     /*----------Estilos de la pagina detalle.html para movil--------------------*/
     .mainDetalle{
         .sectionSup{
+            height: 80vh;
             flex-direction: column;
             .divImagen{
                 width: 250px;
@@ -760,7 +762,7 @@ hr{
                 justify-content: left;
                 margin-top: 10px;
                 h2{
-                    font-size: 1.2rem;
+                    font-size: 1.1rem;
                 }
                 h3{
                     font-size: 0.9rem;
@@ -786,7 +788,7 @@ hr{
             }            
         }
         .sectionInf{
-            height: 60vh;
+            height: 70vh;
             width: 100%;
             display: flex;
             flex-direction: column;
@@ -802,8 +804,8 @@ hr{
                 }
                 iframe{
                     width: 100%;
-                    height: 330px;
-                    object-fit: cover;
+                    /*height: 80%;*/
+                    /*object-fit: cover;*/
                 }
             }
             .divInfo{
